devops303/deploiement.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: devops303
  labels:
    app: devops303
    tier: devops
    criticity: danger
spec:
  selector:
    matchLabels:
      app: devops303
  replicas: 3
  template:
    metadata:
      labels:
        app: devops303
    spec:
      containers:
        - name: devops303
          image: docker.io/library/devops303_ingress_app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8884
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
