devops303/deploiement_redis.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redis
  labels:
    app: redis
    tier: devops
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
