devops303/service.yml
kind: Service
apiVersion: v1
metadata:
  name: devops303
spec:
  selector:
    app: devops303
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8884
