devops303/service_redis.yml
kind: Service
apiVersion: v1
metadata:
  name: service-redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
