devops303/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops303
spec:
  rules:
    - host: devops303.paul
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops303
                port:
                  number: 80
